# undercover_game_llm

./: .gitignore  README.md  game.py  game_analysis.py  llm_client.py  multi_run_games.py  player.py  player_configs.py  pyproject.toml
conf/: gamewords.json  player_config.toml
prompts/: analyze_game_rule.txt  correct_json_template.txt  description_prompt_template.txt  reflect_prompt_template.txt  rule_base.txt  vote_prompt_template.txt
results_example/: result_20250602_125128.json  result_20250602_131920.json  result_20250602_133742.json
src/undercover_game_llm/: game.py  game_analysis.py  llm_client.py  player.py  player_configs.py
